<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Analyze Result</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="image_result">Image result</string>
    <string name="analyze_page_description">Preview of the photo for skin cancer detection. Ensure it is clear and focused!</string>
    <string name="image_preview">Image preview</string>
    <string name="news_title">News</string>
    <string name="analyze_title">Analyze</string>
    <string name="history_title">History</string>
    <string name="delete_status">Delete status</string>
    <string name="history_is_empty">History is empty</string>
    <string name="try_again">Try Again</string>
    <string name="oops_something_went_wrong">oops something went wrong</string>
    <string name="error_page">Error!</string>
    <string name="image_classifier_failed">Image classifier failed</string>
</resources>